@@ -2822,6 +2822,7 @@ $wgMessageStructure = array(
 		'watchlistall2',
 		'namespacesall',
 		'monthsall',
+		'limitall',
 	),
 	'confirmemail' => array(
 		'confirmemail',
